--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "convict": "^6.2.2",
     "date-fns": "^2.11.1",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "gray-matter": "^4.0.2",
     "next": "latest",
     "react": "17.0.2",
@@ -16,6 +19,7 @@
     "remark-html": "^15.0.0"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "sass": "^1.49.9",
